--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,23 @@
   </head>
   <body>
 
+    <p>Huidige taal: <%= I18n.locale %></p>
+    
+    <%= link_to "Engels" %>
+    <%= link_to "Nederlands" %>
+     
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
-
-    <% if current_user %>
-
-      <%= link_to "Uitloggen", destroy_user_session_path, :method => :delete %>
-
+    
+    
+    <% if current_user  %>
+    
+      <%= link_to t("logout"), destroy_user_session_path, :method => :delete %>
+    
     <% end -%>
-
+    
+    
+    
     <%= yield %>
 
   </body>
