--- a/app/views/feedback_messages/_form.html.erb
+++ b/app/views/feedback_messages/_form.html.erb
@@ -12,8 +12,11 @@
   <% end %>
 
   <div class="actions">
+    <label>Email:</label>
   <%= f.text_field :email %> <br />
+  <label>Onderwerp:</label>
   <%= f.text_field :subject %> <br />
+  <label>Bericht:</label>
   <%= f.text_area :body %> <br />
     <%= f.submit %>
   </div>
